deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
  labels:
    app: department
spec:
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: department
          image: sandeeplv/department:v1
          #imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 9
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 9
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: department-service
  labels:
    app: department-service
spec:
  selector:
    app: department-enroll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
